# EmojiCode

./: .gitignore  README.md  flutter-to-github.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/gradle/wrapper/: gradle-wrapper.properties
application/: README.md  pubspec.yaml
application/android/app/: build.gradle
application/android/app/src/debug/: AndroidManifest.xml
application/android/app/src/main/: AndroidManifest.xml
application/assets/strings/: emojis.txt
application/ios/Runner/: Info.plist
application/ios/Runner.xcodeproj/: project.pbxproj
application/lib/: encryptdecrypt.dart  main.dart  utils.dart
application/test/: widget_test.dart
application/web/: manifest.json
docs/: e2i.html  emojiStyleSheet.css  flutter_service_worker.js  i2e.html  index.html  main.dart.js  main.dart.js.map  onepage.html
docs-js-version.backup/: emojiStyleSheet.css
docs-js-version.backup/js/: decrypt.js  encrypt.js
docs/assets/: AssetManifest.json
docs/js/: decrypt.js  encrypt.js
docs/web/: flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map
docs/web/assets/: NOTICES
go/: emojicode  go.mod  main.go
go/assets/: decrypt.go  encrypt.go  params.go
pymodule/emojicode/: assets.py
python/: Notebook.ipynb  README.md  pyproject.toml
python/emojicode/: __init__.py  main.py
scrapbook/: Notebook.ipynb  decrypt.py  encrypt.py  test_string.sh
web/: index.html
web/js/: encrypt.js
(+7 files in other folders)
