[tool.poetry]
name = "emojicode"
version = "0.1.0"
description = "Encrypt and Decrypt messsage with emojis!"
authors = ["Ashrit Yarava <ashdragon95@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
