[tool.poetry]
name = "emojicode"
version = "1.0.0"
description = "Encrypt and Decrypt messsage with emojis!"
authors = ["Ashrit Yarava <ashdragon95@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ashrit-Yarava/EmojiCode.git"
repository = "https://github.com/Ashrit-Yarava/EmojiCode.git"
keywords = [
	"emojicode", "emoji", "encoding", "baseEmoji", "emojis"
]


[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.scripts]
emojicode = 'emojicode.main:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
